premier-cluster-Ingress/premier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
