premier-cluster-Ingress/service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app2
