premier-cluster-Ingress/mon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "nginx-dyma.site"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service-app1
                port:
                  number: 80
    - host: "nginx-dyma.store"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service-app2
                port:
                  number: 80
